--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                         <div class="text-center">
                             <div class="about-img mt-5 mb-5">
-                                <img src="images/Profile-pic.webp" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle" height="400" width="400">
+                                <img src="images/Profile-pic.webp" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle" height="400" width="400" loading="lazy"/>
                             </div>
                             <div class="h3 font-weight-bold mb-3">Jayant Goel
                                 <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
@@ -332,7 +332,7 @@
             <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/aiicb.webp" alt="1" width="1030" height="800"/>
+                        <img class="item-container img-fluid mx-auto" src="images/aiicb.webp" alt="1" width="1030" height="800" loading="lazy"/>
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>AI Image Caption Bot</h5>
@@ -349,7 +349,7 @@
             <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/aimg.webp" alt="1" width="1030" height="800" />
+                        <img class="item-container img-fluid mx-auto" src="images/aimg.webp" alt="1" width="1030" height="800" loading="lazy"/>
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>AI Music Generation</h5>
@@ -365,7 +365,7 @@
             <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/sda.webp" alt="1" width="1030" height="800" />
+                        <img class="item-container img-fluid mx-auto" src="images/sda.webp" alt="1" width="1030" height="800" loading="lazy"/>
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>A School Donation Analysis</h5>
@@ -380,7 +380,7 @@
             <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/asm.webp" alt="1" width="1030" height="800" />
+                        <img class="item-container img-fluid mx-auto" src="images/asm.webp" alt="1" width="1030" height="800" loading="lazy"/>
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>A Social Media</h5>
@@ -397,7 +397,7 @@
             <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/ecs.webp" alt="1" width="1030" height="800" />
+                        <img class="item-container img-fluid mx-auto" src="images/ecs.webp" alt="1" width="1030" height="800" loading="lazy"/>
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>E-Commerce Site</h5>
@@ -412,7 +412,7 @@
             <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/us.webp" alt="1" width="1030" height="800" />
+                        <img class="item-container img-fluid mx-auto" src="images/us.webp" alt="1" width="1030" height="800" loading="lazy"/>
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>URL Shortner</h5>
@@ -430,7 +430,7 @@
 </section>
 <section class="js-section-codespaces-develop section pointer section-codespaces-develop position-relative overflow-hidden z-3" id="trainings">
     <div class="codespaces-develop-bg position-absolute top-0 left-0 width-full height-full"></div>
-    <img src="images/footer-cloud.svg" class="codespaces-develop-cloud position-absolute bottom-0" alt="Footer">
+    <img src="images/footer-cloud.svg" class="codespaces-develop-cloud position-absolute bottom-0" alt="Footer" loading="lazy">
     <div class="container z-index">
         <div style="width: 175px;" class="position-relative mb-6 mx-auto mx-md-0">
             <div class="codespaces-sun position-relative circle">
@@ -454,8 +454,8 @@
                 <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
                 <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
                 <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
-                <img src="images/moon-dark.svg" alt="Moon" class="codespaces-moon-svg-dark position-absolute z-2" />
-                <img src="images/moon.svg" alt="Moon" class="codespaces-moon-svg position-absolute z-2" />
+                <img src="images/moon-dark.svg" alt="Moon" class="codespaces-moon-svg-dark position-absolute z-2" loading="lazy"/>
+                <img src="images/moon.svg" alt="Moon" class="codespaces-moon-svg position-absolute z-2" loading="lazy"/>
             </div>
         </div>
         <div class="row justify-content-center txt-bg txt-bg-training">
