--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<!--    <base href="/">-->
+    <base href="/">
     <link rel="manifest" href="manifest.json"/>
     <link rel="apple-touch-icon" href="images/Profile-pic.png">
     <meta name="theme-color" content="#242a35"/>
