--- a/404.html
+++ b/404.html
@@ -2,7 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Jayant Goel </title>
+
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico">
+
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="404.min.css" type="text/css">
 </head>
 <body>
     <div class="text">
@@ -11,5 +19,7 @@
         <h3>Sorry we cant find what you are looking for 'cuz its so dark in here</h3>
     </div>
     <div class="torch"></div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="404.min.js"></script>
 </body>
 </html>
