--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <div class="text">
         <h1>404</h1>
         <h2>Uh, Ohh</h2>
-        <h3>Sorry we cant find what you are looking for 'cuz its so dark in here</h3>
+        <h3>Sorry we can't find what you are looking for 'cuz its so dark in here</h3>
     </div>
     <div class="torch"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
