--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
         <h2>Uh, Ohh</h2>
         <h3>Sorry we can't find what you are looking for 'cuz its so dark in here</h3>
     </div>
-    <div class="torch"></div>
+    <div class="torch" onclick="location.href='/';"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="404.min.js"></script>
 </body>
