--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 
 <head>
     <base href="/">
+
     <link rel="manifest" href="manifest.json"/>
-    <link rel="apple-touch-icon" href="images/Profile-pic.png">
-    <meta name="theme-color" content="#242a35"/>
+
+    <link rel="apple-touch-icon" href="images/favicon.ico">
+    <link rel="fluid-icon" href="images/favicon.ico" title="Personal Portfolio">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico">
 
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#242a35"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Jayant Goel </title>
     <meta name="DC.title" content="Jayant Goel" />
     <meta name="description" content="Jayant Goel Personal Portfolio" />
-    <link rel="fluid-icon" href="https://jayantgoel001.github.io/images/Profile-pic.png" title="Personal Portfolio">
+
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001" />
     <meta name="author" content="Jayant Goel" />
 
@@ -29,9 +34,6 @@
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio"/>
     <meta name="twitter:image" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta name="twitter:card" content="summary_large_image" />
-
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico">
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
 
