--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a rel="noreferrer" aria-label="image" href="https://twitter.com/JayantGoel6" target="_blank"
+                            <a rel="noreferrer" aria-label="image" href="https://twitter.com/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Twitter</em></strong>">
                                 <i class="fab fa-twitter dark" ></i>
                             </a>
