--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="style.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />
+<!--    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">-->
+<!--    <link rel="stylesheet" type="text/css" href="style.min.css" />-->
+<!--    <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />-->
+    <link rel="stylesheet" type="text/css" href="styles.min.css">
 </head>
 
 <body>
