--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
-
+<!--    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">-->
 <!--    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">-->
 <!--    <link rel="stylesheet" type="text/css" href="style.min.css" />-->
 <!--    <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />-->
