--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.ico">
 
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="404.min.css" type="text/css">
+    <link rel="stylesheet" href="css/404.min.css" type="text/css">
 </head>
 <body>
     <div class="text">
