--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
-
-<!--    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">-->
-<!--    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">-->
-<!--    <link rel="stylesheet" type="text/css" href="style.min.css" />-->
-<!--    <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />-->
-    <link rel="stylesheet" type="text/css" href="styles.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.min.css">
 </head>
 
 <body>
