--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
-    <link rel="stylesheet" type="text/css" href="css/critical-styles.css">
-    <link rel="preload" href="css/styles.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/styles.min.css"></noscript>
+    <link rel="stylesheet" type="text/css" href="css/styles.min.css">
 </head>
 
 <body>
