--- a/404.html
+++ b/404.html
@@ -19,6 +19,6 @@
     </div>
     <div class="torch" onclick="location.href='https://jayantgoel001.github.io/';"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="404.min.js"></script>
+    <script type="text/javascript" src="js/404.min.js"></script>
 </body>
 </html>
