--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <base href="/">
+
     <link rel="manifest" href="manifest.json"/>
 
     <link rel="apple-touch-icon" href="images/favicon.ico">
