--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     <meta name="twitter:title" content="Jayant Goel" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio"/>
-    <meta name="twitter:image" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
+    <meta name="twitter:site" content="@JayantGoel001">
+    <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
