--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
 
 <div id="notification">A new version of this app is available. Click <a id="reload">Here</a> to update.</div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/jquery.easing.min.js"></script>
 <script src="js/scrollspy.min.js"></script>
