--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <em>
-                            Completed The Course on Data Structure and Algorithm which also included implementation of every Data Structure in Java and Scored 1st Rank in HackerEarth Coding Bootcamp.
+                            The Course on Data Structure and Algorithm which included implementation of every Data Structure in Java and Scored 1st Rank in HackerEarth Coding Bootcamp.
                         </em>
                         <br>
                         <br>
