--- a/index.html
+++ b/index.html
@@ -476,10 +476,9 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <em>
+                            <div class="mb-1">
                                 Theatron is an entertainment Android Application which I created using Kotlin with Firebase as Backend and Deployed It On Play Store.
-                            </em>
-                            <br>
+                            </div>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing"
                                target="_blank" class="btn btn-round p-2 certificate-button"
@@ -501,10 +500,8 @@
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <div class="services-icon">
-                                <em>The training included the basics and practical application of Android Development. I made a lot of projects on Integrating API's and Implementing Firebase in Android.
-                                </em>
-                                <br>
-                                <br>
+                                <div class="mb-1">The training included the basics and practical application of Android Development. I made a lot of projects on Integrating API's and Implementing Firebase in Android.
+                                </div>
                                 <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1lSc9it--0LooJpp6A7riggSFZPVq2vn6/view?usp=sharing"
                                    target="_blank" class="btn btn-round p-2 certificate-button"
                                    data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
@@ -525,8 +522,7 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <em> This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of visualisation, analysis etc. </em>
-                            <br>
+                            <div class="mb-1"> This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of visualisation, analysis etc. </div>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1lZmX1wmZLo8ksY6NsrFM9cNfL8HWdMBn/view?usp=sharing"
                                target="_blank" class="btn btn-round p-2 certificate-button"
@@ -549,9 +545,7 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <em>Complete Web Development course which focused on both Front and Back-end Development, starting with HTML, CSS, JavaScript to MEAN Stack Development</em>
-                            <br>
-                            <br>
+                            <div class="mb-1">Complete Web Development course which focused on both Front and Back-end Development, starting with HTML, CSS, JavaScript to MEAN Stack Development</div>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/12THg9_3-KtjSRe7pLfw27_pqwkDtSQMx/view?usp=sharing"
                                target="_blank" class="btn btn-round p-2 certificate-button"
                                data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
@@ -572,8 +566,7 @@
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <div class="services-icon">
-                                <em>Python bootcamp served as a window for me for the Advanced Python Developer, as it helped me to start applying my knowledge in more Advance and GUI Part.</em>
-                                <br>
+                                <div class="mb-1">Python bootcamp served as a window for me for the Advanced Python Developer, as it helped me to start applying my knowledge in more Advance and GUI Part.</div>
                                 <br>
                                 <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1AdmAM40vQ_mfzz7pVUcUea2S38E6Epuz/view?usp=sharing"
                                    target="_blank" class="btn btn-round p-2 certificate-button"
@@ -594,11 +587,9 @@
                         </div>
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
-                        <em>
+                        <div class="mb-1">
                             The Course on Data Structure and Algorithm which included implementation of every Data Structure in Java and Scored 1st Rank in HackerEarth Coding Bootcamp.
-                        </em>
-                        <br>
-                        <br>
+                        </div>
                         <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1FWIJ_NTA7Z31eIX7qBIlUnnottfjGsWf/view?usp=sharing"
                            target="_blank" class="btn btn-round p-2 certificate-button"
                            data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
