--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
     <link rel="stylesheet" type="text/css" href="css/styles.min.css">
+    <script data-ad-client="ca-pub-9889165132533291" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
