--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <link rel="manifest" href="manifest.json"/>
-
-    <link rel="apple-touch-icon" href="images/favicon.ico">
-    <link rel="fluid-icon" href="images/favicon.ico" title="Personal Portfolio">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico">
-
     <meta charset="UTF-8">
     <meta name="theme-color" content="#242a35"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon" type="image/x-icon" sizes="192x192" href="./images/favicon.ico">
+    <link rel="apple-touch-icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="fluid-icon" type="image/x-icon" sizes="192x192" href="./images/favicon.ico" title="Personal Portfolio">
+    <link rel="shortcut icon" type="image/x-icon" sizes="192x192" href="./images/favicon.ico">
+
+    <link rel="manifest" href="manifest.json"/>
 
     <title>Jayant Goel </title>
     <meta name="DC.title" content="Jayant Goel" />
@@ -34,8 +34,10 @@
     <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta name="twitter:card" content="summary_large_image" />
 
-    <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
     <link rel="stylesheet" type="text/css" href="css/styles.min.css">
+
+    <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
+
     <script data-ad-client="ca-pub-9889165132533291" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
