--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jayant Goel </title>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/profile-icon.ico" type="image/x-icon">
+    <link rel="icon" href="images/profile-icon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/404.min.css" type="text/css">
 </head>
