--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="theme-color" content="#242a35"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/x-icon" sizes="192x192" href="./images/favicon.ico">
-    <link rel="apple-touch-icon" type="image/x-icon" href="./images/favicon.ico">
-    <link rel="fluid-icon" type="image/x-icon" sizes="192x192" href="./images/favicon.ico" title="Personal Portfolio">
-    <link rel="shortcut icon" type="image/x-icon" sizes="192x192" href="./images/favicon.ico">
+    <link rel="icon" type="image/x-icon" sizes="192x192" href="images/profile-icon.ico">
+    <link rel="apple-touch-icon" type="image/x-icon" href="images/profile-icon.ico">
+    <link rel="fluid-icon" type="image/x-icon" sizes="192x192" href="images/profile-icon.ico" title="Personal Portfolio">
+    <link rel="shortcut icon" type="image/x-icon" sizes="192x192" href="images/profile-icon.ico">
 
     <link rel="manifest" href="manifest.json"/>
 
