--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name="theme-color" content="#242a35"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--    <link rel="icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico">-->
-<!--    <link rel="apple-touch-icon" type="image/x-icon" href="./images/profile-icon.ico">-->
-<!--    <link rel="fluid-icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico" title="Personal Portfolio">-->
-<!--    <link rel="shortcut icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico">-->
-    <link rel="mask-icon" href="https://github.githubassets.com/pinned-octocat.svg" color="#000000">
-    <link rel="alternate icon" class="js-site-favicon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
-    <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://github.githubassets.com/favicons/favicon.svg">
+    <link rel="icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico">
+    <link rel="apple-touch-icon" type="image/x-icon" href="./images/profile-icon.ico">
+    <link rel="fluid-icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico" title="Personal Portfolio">
+    <link rel="shortcut icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico">
 
     <link rel="manifest" href="manifest.json"/>
 
