Revert "Initial Commit"
This reverts commit 8728a800

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
 <script src="js/vanilla-tilt.min.js"></script>
 <script src="js/dark-light-theme.min.js"></script>
 
-<script src="js/font-awesome.js"></script>
+<script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
 <script src="js/app.min.js"></script>
 </body>
 </html>
