--- a/404.html
+++ b/404.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jayant Goel </title>
-    <link rel="shortcut icon" href="images/profile-icon.ico" type="image/x-icon">
-    <link rel="icon" href="images/profile-icon.ico">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="mask-icon" href="images/apple-touch-icon.png" color="#242a35">
+
+    <meta name="msapplication-TileColor" content="#242a35">
+    <meta name="msapplication-TileImage" content="images/mstile-144x144.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/404.min.css" type="text/css">
 </head>
