--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#242a35"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="mask-icon" href="images/apple-touch-icon.png" color="#242a35">
 
-    <link rel="icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico">
-    <link rel="apple-touch-icon" type="image/x-icon" href="./images/profile-icon.ico">
-    <link rel="fluid-icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico" title="Personal Portfolio">
-    <link rel="shortcut icon" type="image/x-icon" sizes="192x192" href="./images/profile-icon.ico">
+    <meta name="msapplication-TileColor" content="#242a35">
+    <meta name="msapplication-TileImage" content="images/mstile-144x144.png">
 
     <link rel="manifest" href="manifest.json"/>
 
