--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#242a35"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="mask-icon" href="images/apple-touch-icon.png" color="#242a35">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="mask-icon" href="apple-touch-icon.png" color="#242a35">
 
     <meta name="msapplication-TileColor" content="#242a35">
-    <meta name="msapplication-TileImage" content="images/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 
     <link rel="manifest" href="manifest.json"/>
 
