--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#242a35">
+    <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#242a35">
 
     <meta name="msapplication-TileColor" content="#242a35">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
 
     <link rel="manifest" href="manifest.json"/>
 
