--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
     <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/regular.min.css">
-    <link rel="stylesheet" type="text/css" href="css/solid.min.css">
-
     <link rel="stylesheet" type="text/css" href="css/fonts.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.min.css">
 
@@ -714,8 +710,7 @@
                             <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>GitHub</em></strong>"
                             >
-                                <img src="images/github.webp" width="15px" height="15px" alt="github" loading="lazy"/>
-
+                                <i class="fab fa-github dark"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
@@ -728,7 +723,7 @@
                         <li class="list-inline-item">
                             <a rel="noreferrer" aria-label="image" href="https://www.linkedin.com/in/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>LinkedIn</em></strong>">
-                                <img src="images/linkedin.webp" width="15px" height="15px" alt="linkedin" loading="lazy"/>
+                                <i class="fab fa-linkedin-in dark h6"></i>
                             </a>
                         </li>
                     </ul>
@@ -736,19 +731,19 @@
                         <li class="list-inline-item">
                             <a rel="noreferrer" aria-label="image" href="https://www.instagram.com/jayantgoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Instagram</em></strong>">
-                                <img src="images/instagram.webp" width="20px" height="20px" alt="instagram" loading="lazy"/>
+                                <i class="fab fa-instagram dark h6"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a rel="noreferrer" aria-label="image" href="https://www.facebook.com/jayant.goel.12/" target="_blank"
                                data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Facebook</em></strong>">
-                                <img src="images/facebook.webp" width="13px" height="15px" alt="facebook" loading="lazy"/>
+                                <i class="fab fa-facebook dark"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a rel="noreferrer" aria-label="image" href="https://twitter.com/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Twitter</em></strong>">
-                                <img src="images/twitter.webp" width="13px" height="15px" alt="twitter" loading="lazy"/>
+                                <i class="fab fa-twitter dark" ></i>
                             </a>
                         </li>
                     </ul>
@@ -771,9 +766,6 @@
 <script src="js/vanilla-tilt.min.js"></script>
 <script src="js/dark-light-theme.min.js"></script>
 <script src="js/app.min.js"></script>
-
-<script src="js/regular.min.js"></script>
-<script src="js/solid.min.js"></script>
-<script src="js/fontawesome.min.js"></script>
+<script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
 </body>
 </html>
