--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <meta name="msapplication-TileColor" content="#242a35">
     <meta name="msapplication-TileImage" content="images/mstile-144x144.png">
 
-    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link rel="preload" href="css/fonts.min.css" type="text/css">
     <link rel="stylesheet" href="css/404.min.css" type="text/css">
 </head>
 <body>
