--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="preload" type="text/css" href="css/fonts.min.css">
+    <link rel="stylesheet" type="text/css" href="css/fonts.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.min.css">
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
