--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <link rel="manifest" href="manifest.json"/>
 
-    <title>Jayant Goel </title>
-    <meta name="DC.title" content="Jayant Goel" />
+    <title>Jayant Goel ♠️</title>
+    <meta name="DC.title" content="Jayant Goel ♠️" />
     <meta name="description" content="Jayant Goel Personal Portfolio" />
 
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001" />
     <meta name="author" content="Jayant Goel" />
 
-    <meta property="og:title" content="Jayant Goel"/>
+    <meta property="og:title" content="Jayant Goel ♠️"/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio " />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.png"/>
@@ -31,7 +31,7 @@
 
     <meta property="fb:app_id" content="1145054172578219"/>
 
-    <meta name="twitter:title" content="Jayant Goel" />
+    <meta name="twitter:title" content="Jayant Goel ♠️" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio"/>
     <meta name="twitter:site" content="@JayantGoel001">
     <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
