--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="DC.title" content="Jayant Goel ♠️" />
     <meta name="description" content="Jayant Goel Personal Portfolio" />
 
-    <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001" />
+    <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001, Android, Web Development, Machine Learning, GitHub, Data Science" />
     <meta name="author" content="Jayant Goel" />
 
     <meta property="og:title" content="Jayant Goel ♠️"/>
