--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#242a35"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" sizes="48x48" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="manifest.json"/>
+
+    <title>Jayant Goel | Jayant Goel Personal Portfolio</title>
+    <meta name="DC.title" content="Jayant Goel | Jayant Goel Personal Portfolio" />
+    <meta name="description" content="Jayant Goel Personal Portfolio" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#242a35">
 
     <meta name="msapplication-TileColor" content="#242a35">
     <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
 
-    <link rel="manifest" href="manifest.json"/>
-
-    <title>Jayant Goel ♠️</title>
-    <meta name="DC.title" content="Jayant Goel ♠️" />
-    <meta name="description" content="Jayant Goel Personal Portfolio" />
-
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001, Android, Web Development, Machine Learning, GitHub, Data Science" />
     <meta name="author" content="Jayant Goel" />
 
-    <meta property="og:title" content="Jayant Goel ♠️"/>
+    <meta property="og:title" content="Jayant Goel"/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio " />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.png"/>
@@ -31,7 +30,7 @@
 
     <meta property="fb:app_id" content="1145054172578219"/>
 
-    <meta name="twitter:title" content="Jayant Goel ♠️" />
+    <meta name="twitter:title" content="Jayant Goel" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio"/>
     <meta name="twitter:site" content="@JayantGoel001">
     <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
