--- a/404.html
+++ b/404.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jayant Goel ♠️</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="mask-icon" href="apple-touch-icon.png" color="#242a35">
+    <title>Jayant Goel | Jayant Goel Personal Portfolio</title>
+    <meta name="DC.title" content="Jayant Goel | Jayant Goel Personal Portfolio" />
+    <meta name="description" content="Jayant Goel Personal Portfolio" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#242a35">
 
     <meta name="msapplication-TileColor" content="#242a35">
-    <meta name="msapplication-TileImage" content="images/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
 
     <link rel="stylesheet" href="css/fonts.min.css" type="text/css">
     <link rel="stylesheet" href="css/404.min.css" type="text/css">
