--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 
     <title>Jayant Goel | Jayant Goel Personal Portfolio</title>
     <meta name="DC.title" content="Jayant Goel | Jayant Goel Personal Portfolio" />
-    <meta name="description" content="A Programming Enthusiast eager to contribute to team success through hard work, innovative ideas and excellent organizational skills." />
+    <meta name="description" content="A Programming Enthusiast eager to contribute to team success through hard work, innovative ideas, excellent technical and organizational skills." />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
