--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>Jayant Goel | Jayant Goel Personal Portfolio</title>
     <meta name="DC.title" content="Jayant Goel | Jayant Goel Personal Portfolio" />
-    <meta name="description" content="A Programming Enthusiast eager to contribute to team success through hard work, innovative ideas and excellent organizational skills." />
+    <meta name="description" content="A Programming Enthusiast eager to contribute to team success through hard work, innovative ideas, and excellent organizational skills." />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
@@ -23,7 +23,7 @@
     <meta name="author" content="Jayant Goel" />
 
     <meta property="og:title" content="Jayant Goel | Jayant Goel Personal Portfolio"/>
-    <meta property="og:description" content="A Programming Enthusiast eager to contribute to team success through hard work, innovative ideas and excellent organizational skills." />
+    <meta property="og:description" content="A Programming Enthusiast eager to contribute to team success through hard work, innovative ideas, and excellent organizational skills." />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.png"/>
     <meta property="og:type" content="website" />
@@ -31,7 +31,7 @@
     <meta property="fb:app_id" content="1145054172578219"/>
 
     <meta name="twitter:title" content="Jayant Goel | Jayant Goel Personal Portfolio" />
-    <meta name="twitter:description" content="A Programming Enthusiast eager to contribute to team success through hard work, innovative ideas and excellent organizational skills."/>
+    <meta name="twitter:description" content="A Programming Enthusiast eager to contribute to team success through hard work, innovative ideas, and excellent organizational skills."/>
     <meta name="twitter:site" content="@JayantGoel001">
     <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta name="twitter:card" content="summary_large_image" />
