--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001, Android, Web Development, Machine Learning, GitHub, Data Science" />
     <meta name="author" content="Jayant Goel" />
 
+    <meta property="og:image:width" content="1062">
+    <meta property="og:image:height" content="708">
     <meta property="og:title" content="Jayant Goel | Jayant Goel Personal Portfolio"/>
     <meta property="og:description" content="A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, excellent organizational skills." />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
