--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Jayant Goel | Jayant Goel Personal Portfolio"/>
     <meta property="og:description" content="A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, excellent organizational skills." />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
-    <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.png"/>
+    <meta property="og:image" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta property="og:type" content="website" />
 
     <meta property="fb:app_id" content="1145054172578219"/>
