--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="description" content="A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, excellent organizational skills." />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="./favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#242a35">
