--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Jayant Goel | Jayant Goel Personal Portfolio</title>
-    <meta name="DC.title" content="Jayant Goel | Jayant Goel Personal Portfolio" />
-    <meta name="description" content="A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, excellent organizational skills." />
+    <title>Jayant Goel | Jayant Goel Portfolio</title>
+    <meta name="DC.title" content="Jayant Goel | Jayant Goel Portfolio" />
+    <meta name="description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills." />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="48x48" href="./favicon-48x48.png">
