--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json"/>
 
-    <title>Jayant Goel | Jayant Goel Personal Portfolio</title>
-    <meta name="DC.title" content="Jayant Goel | Jayant Goel Personal Portfolio" />
-    <meta name="description" content="A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, excellent organizational skills." />
+    <title>Jayant Goel | Jayant Goel Portfolio</title>
+    <meta name="DC.title" content="Jayant Goel | Jayant Goel Portfolio" />
+    <meta name="description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills." />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="48x48" href="./favicon-48x48.png">
@@ -25,16 +25,16 @@
 
     <meta property="og:image:width" content="1062">
     <meta property="og:image:height" content="556">
-    <meta property="og:title" content="Jayant Goel | Jayant Goel Personal Portfolio"/>
-    <meta property="og:description" content="A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, excellent organizational skills." />
+    <meta property="og:title" content="Jayant Goel | Jayant Goel Portfolio"/>
+    <meta property="og:description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills." />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:image" content="https://jayantgoel001.github.io/images/og-image.jpg"/>
     <meta property="og:type" content="website" />
 
     <meta property="fb:app_id" content="1145054172578219"/>
 
-    <meta name="twitter:title" content="Jayant Goel | Jayant Goel Personal Portfolio" />
-    <meta name="twitter:description" content="A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, excellent organizational skills."/>
+    <meta name="twitter:title" content="Jayant Goel | Jayant Goel Portfolio" />
+    <meta name="twitter:description" content="Jayant Goel(JayantGoel001) - A Programming Enthusiast eager to learn new skills and contribute to team success through hard work, innovative ideas, and great organizational skills."/>
     <meta name="twitter:site" content="@JayantGoel001">
     <meta name="twitter:image:src" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta name="twitter:card" content="summary_large_image" />
