--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <meta property="og:image" content="https://jayantgoel001.github.io/images/og-image.jpg"/>
     <meta property="og:type" content="website" />
 
+    <link rel='canonical' href='https://jayantgoel001.github.io/'>
+
     <meta property="fb:app_id" content="1145054172578219"/>
 
     <meta name="twitter:title" content="Jayant Goel | Jayant Goel Portfolio" />
